--- a/release/eSixCafe.user.css
+++ b/release/eSixCafe.user.css
@@ -1259,7 +1259,7 @@ if themep == classic {
 	#sidebar .general-tag-list a:hover {
 		color:var(--tag-cat-1-hover)!important;
 	}
-	.category-1 a, a.tag-type-1, .dtext-color-artist {
+	.category-1 a, a.tag-type-1, .dtext-color-art, .dtext-color-artist {
 		color:var(--tag-cat-2)!important;
 	}
 	.category-1 a:hover, a.tag-type-1:hover {
@@ -1271,19 +1271,19 @@ if themep == classic {
 	.category-3 a:hover, a.tag-type-3:hover {
 		color:var(--tag-cat-3-hover)!important;
 	}
-	.category-4 a, a.tag-type-4, .dtext-color-character {
+	.category-4 a, a.tag-type-4, .dtext-color-char, .dtext-color-character {
 		color:var(--tag-cat-4)!important;
 	}
 	.category-4 a:hover, a.tag-type-4:hover {
 		color:var(--tag-cat-4-hover)!important;
 	}
-	.category-5 a, a.tag-type-5, .dtext-color-species {
+	.category-5 a, a.tag-type-5, .dtext-color-spec, .dtext-color-species {
 		color:var(--tag-cat-5)!important;
 	}
 	.category-5 a:hover, a.tag-type-5:hover {
 		color:var(--tag-cat-5-hover)!important;
 	}
-	.category-6 a, a.tag-type-6, .dtext-color-invalid {
+	.category-6 a, a.tag-type-6, .dtext-color-inv, .dtext-color-invalid {
 		color:var(--tag-cat-6)!important;
 	}
 	.category-6 a:hover, a.tag-type-6:hover {
